src/objects/ywjhzjbsj__c.object
<CustomObject>
    <fields>
        <fullName>EstimatedTotalTransactionAmount__c</fullName>
        <label>预计成交总金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExpectedClosingDate__c</fullName>
        <label>预计成交日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>month__c</fullName>
        <label>月份</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>possibility__c</fullName>
        <label>可能性</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>30%</fullName>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>70%</fullName>
                </value>
                <value>
                    <fullName>80%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>stage__c</fullName>
        <label>阶段</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>潜在阶段</fullName>
                </value>
                <value>
                    <fullName>意向阶段</fullName>
                </value>
                <value>
                    <fullName>立项阶段</fullName>
                </value>
                <value>
                    <fullName>认可阶段</fullName>
                </value>
                <value>
                    <fullName>谈判阶段</fullName>
                </value>
                <value>
                    <fullName>成交阶段</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ywjh__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>业务机会</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>业务机会中间表数据</relationshipLabel>
        <relationshipName>ywjh</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>业务机会中间表数据</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <label>业务机会中间表数据名称</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>业务机会中间表数据</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>